# ZephyrProject-Repo

./: .gitignore  Pipfile  README.md
.github/workflows/: build_zephyr_c.yml  linux_zephyr_c_build.yml
examples/unit_testing/: BUILD.md  CMakeLists.txt  README.md  run_twister.py
examples/unit_testing/lib/bar/include/: bar.h
examples/unit_testing/lib/bar/src/: bar.c
examples/unit_testing/lib/bar/test/: CMakeLists.txt  main.c  testcase.yaml
examples/unit_testing/lib/foo/include/: foo.h
examples/unit_testing/lib/foo/mock/: mock_foo.h
examples/unit_testing/lib/foo/src/: foo.c
examples/unit_testing/lib/foo/test/: CMakeLists.txt  main.c  testcase.yaml
examples/unit_testing/scripts/: coverage_update.py
examples/unit_testing/scripts/cmake/: unittest.cmake
examples/unit_testing/src/: main.c
